--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./index.ts"></script>
   </head>
   <body>
     <main class="container">
