--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,13 @@
   </head>
   <body>
     <main class="container">
-      <include src="./partials/image-swiper.html"></include>
-      <include src="./partials/fundraising.html"></include>
+      <div class="flex-conteiner">
+        <include src="./partials/image-swiper.html"></include>
+        <include src="./partials/fundraising.html"></include>
+      </div>
       <include src="./partials/description.html"></include>
-      <!-- <include src="./partials/reviews.html"></include> -->
-      <!-- <include src="./partials/stories.html"></include> -->
+      <include src="./partials/reviews.html"></include>
+      <include src="./partials/stories.html"></include>
       <include src="./partials/partnership.html"></include>
     </main>
   </body>
